# brailer-monitor

./: .gitignore  README.md  health_science_curriculum_trends_2026.html  health_science_curriculum_trends_2026_en.html  health_science_curriculum_trends_2026_en_whitepaper.html  health_science_curriculum_trends_2026_ko_whitepaper.html  ndmu_health_science_curriculum_gap_analysis_2026_en_whitepaper.html  pyproject.toml  requirements.txt  sea.output
brailer_monitor/: __init__.py  __main__.py  aggregation.py  calibration.py  cli.py  cvat_import.py  dataset_preview.py  detect_report.py  detect_timeline.py  detector.py  events.py  frame_extractor.py  label_format.py  labeling.py  lake_video_source.py  model_library.py  oneshot.py  pipeline.py  sea_area_analysis.py  sea_area_scan.py  tracker.py  train.py  transfer_counter.py  video_detect.py  video_time.py  volume_estimator.py
config/: calibration.json  dataset.yaml  lake_video.json  sea_area.json  standard_capacity.json
examples/: sample_calibration.json  sample_events.json
scripts/: clear_auto_labels.py  export_tensorrt.sh  label_brailer.py  plot_sea_area_output.py  plot_sea_area_summary.py
tests/: test_annotation.py  test_cvat_import.py  test_dataset_preview.py  test_detect_batch.py  test_detect_report.py  test_detect_timeline.py  test_detector.py  test_events.py  test_frame_extractor.py  test_label_format.py  test_lake_video_source.py  test_model_library.py  test_oneshot.py  test_pipeline.py  test_saved_results.py  test_sea_area_analysis.py  test_sea_area_scan.py  test_train.py  test_video_detect.py  (+1 more)
(+2815 files in other folders)
